bk_ida/gccida/g1/add_abstract_origin_attribute
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_abstract_origin_attribute/src/dwarf2out.c:9894:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_abstract_origin_attribute/src/dwarf2out.c:9895:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_abstract_origin_attribute/src/dwarf2out.c:9917:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 9459, "add_abstract_origin_attribute"); 
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/add_abstract_origin_attribute/src/obj/dwarf2out.o] Error 1
